[package]
name = "xcli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
percent-encoding = "2"
rand = "0.8"
