[package]
name = "xcli"
version = "1.0.0"
edition = "2021"
description = "X (Twitter) API CLI tool"
license = "MIT"
repository = "https://github.com/hulryung/xcli"
homepage = "https://github.com/hulryung/xcli"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
percent-encoding = "2"
rand = "0.8"
open = "5"
dirs = "5"
